2015-10-20  Moritz Bunkus  <moritz@bunkus.org>

        * Released v1.4.4.

        * KaxInternalBlock::ReadData(): Fixed an invalid memory
        access. When reading a block group or a simple block that uses
        EBML lacing the frame sizes indicated in the lacing weren't
        checked against the available number of bytes. If the indicated
        frame size was bigger than the whole block's size the parser would
        read beyond the end of the buffer resulting in a heap information
        leak.

2015-10-17  Moritz Bunkus  <moritz@bunkus.org>

        * Released v1.4.3.

2015-05-02  Daniel Winzen  <d@winzen4.de>

        * all: a couple of optimizations in the main library and a memory
        leak fix in the tests

2015-02-01  Jan Engelhardt  <jengelh@inai.de>

        * build system: fix linking against libEBML

2015-01-04  Moritz Bunkus  <moritz@bunkus.org>

        * Released v1.4.2.

2014-12-21  Moritz Bunkus  <moritz@bunkus.org>

        * build system: switched the build system from hand-crafted
        Makefiles to an autoconf/automake-based system. A pkg-config file
        will be installed as well; its name is »libmatroska«. Based on a
        similar patch for libEBML by Jan Engelhardt <jengelh@inai.de>.

2014-12-20  Moritz Bunkus  <moritz@bunkus.org>

        * KaxBlock::ReadData(): fixed several instances of unchecked
        memory access leading to invalid memory access/segmentation faults
        with invalid or broken data inside block groups/simple blocks.

2014-12-19  Moritz Bunkus  <moritz@bunkus.org>

        * KaxBlock::ReadInternalHead(): fixed a off-by-one buffer overflow
        if with EBML lacing and exactly one frame in the lace.

2013-09-17 mosu
New 1.4.1 version:
    - Added new elements/classes DiscardPadding, CodecDelay and
      SeekPreRoll
    - The licensing information has been cleared up/unified.
    - The Makefile now contain options for specifying the destination